--- a/notebooks/hello_bach.ipynb
+++ b/notebooks/hello_bach.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "!!!!!!!!!!!!!!!! DRAFT DRAFT DRAFT !!!!!!!!!!!!!!!!\n",
+    "!!!!!!!!!!!!!!!! HALLO !!!!!!!!!!!!!!!!\n",
     "\n",
     "!!!!!!!!!!!!!!!! work in progesss  !!!!!!!!!!!!!!!! \n",
     "\n",
